--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,3 @@
-
 .Main {
   min-height: 110vh;
   display: flex;
@@ -6,52 +5,56 @@
   font-size: calc(10px + 2vmin);
   font-family: "";
 }
+.Problem-title{
+  text-align: center;
+  margin: 20px;
+}
 
-.problem {
+.mission {
   background-color: #133863;
   text-align: center;
-  justify-content: center;
   margin: 40px;
   margin-bottom: 20px;
   color: #ffde00;
   border-radius: 20px;
 }
-.problem-text{
-    text-align: justify;
-    margin: 20px;
-}
 
-.wrap-pic {
+.problem-pic{
+
+  width: 15vmax;
+  height: 15vmax;
+  margin:25px;
+}
+.mission-pic{
   float: left;
-  width: 14vmax;
+  margin: 20px;
+  width: 10vmax;
   height: 10vmax;
-  margin: 14px;
-  border-color: #282c34;
-  border-style: solid;
+ 
 }
 
+.StandardPic {
+  width: 20vmax;
+  height: 20vmax;
+  margin: 30px;
+}
 .place-holder {
   margin: 40px;
   width: 10vmax;
   height: 10vmax;
 }
 
-.mission {
-  background-color: #ffde00;
-  text-align: center;
-  margin: 40px;
+.problem {
+  margin: 0px 70px 0px 70px;
   margin-top: 20px;
   color: #133863;
   border-radius: 20px;
 }
 
-.mission-pic {
-  float: right;
-  text-align: right;
-}
 .mission-text{
   text-align: left;
   margin: 20px;
+  margin-top: 100px;
 }
 
 .solutions {
@@ -101,20 +104,4 @@
   width: 60vmax;
   height: 55vmax;
   border-radius: 20px;
-}
-.stats {
-  background-color: #133863;
-  text-align: center;
-  margin-top: 120px;
-  margin: 40px;
-  float: left;
-  border-radius: 20px;
-  color: #ffde00;
-}
-.stats-place-holder {
-  width: 14vmax;
-  height: 10vmax;
-}
-.stats-text {
-  margin-top: 0px;
 }
