--- a/src/main.css
+++ b/src/main.css
@@ -37,11 +37,11 @@
 }
 
 .mission {
-  background-color: #ffde00;
+  background-color: #282c34;
   text-align: center;
   margin: 40px;
   margin-top: 20px;
-  color: #133863;
+  color: #ffde00;
   border-radius: 20px;
 }
 
@@ -65,7 +65,7 @@
 
 }
 .solution-explain{
-  color: #133863;
+  color: #ffde00;
   border-radius: 20px
 
 }
@@ -83,18 +83,18 @@
   margin-top: 50px;
   margin-right: 10px;
   text-align: center;
-  background-color: #ffde00;
+  background-color: #282c34;
 
 }
 .colorRow {
-  background-color: #ffde00;
+  background-color: #282c34;
   margin: 10px;
   margin-top: 0px;
   margin-left: 15px;
 }
 .yellow-cards{
   border-radius: 20px;
-  background-color:#ffde00; 
+  background-color:#282c34;
 }
 .align-container {
   justify-content: center;
