--- a/src/Main.css
+++ b/src/Main.css
@@ -1,3 +1,7 @@
+.Main h2{
+  text-decoration-line: underline;
+  font-weight: 800;
+}
 .Main {
   min-height: 110vh;
   display: flex;
@@ -59,7 +63,7 @@
 .solution-pic {
   width: 80%;
   height: 80%;
-  margin-left: 0px;
+  margin-left: 40px;
   margin-right: 20px;
   margin-top: 0px;
   margin: 0px;
